# pscore

./: .gitignore  Dockerfile  README.md  create-aws-stack.sh  docker-compose.yml  requirements.txt  start.sh
cloudformation/: continuous-deployment.yml
frontend/: package.json  webpack-stats.json  webpack.config.js  webpack.dev.js
frontend/src/: index.js
frontend/src/main/: main.js
pscore_cpp/: .cproject  .gitignore  CMakeLists.txt  expected.txt
pscore_cpp/include/: pscore.h
pscore_cpp/src/: main.cpp  pscore.cpp  python_wrapper.cpp
website/: settings.py  urls.py
